# GPGPU_in-mem_msg_q

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docker/: docker-compose.yml
docs/: api.md  benchmarking.md  design.md  index.md  packaging.md  research.md  runbook.md  tasks.md  testing.md  use_cases.md
docs/api/: cpp.md
docs/dev/: publishing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: track-a.md  track-b.md
include/gpuqueue/: gpu_queue.hpp  memory.hpp  queue.hpp  ring_buffer.hpp  types.hpp
scripts/: benchmark_with_monitor.py  check_env.sh  hardware_monitor.py  run_sanitizers.sh  soak_test.py  test_redis.py
src/cpp/: bindings.cpp  queue_core.cpp
src/cuda/: queue_kernels.cu
src/python/gpuqueue/: __init__.py
src/python/gpuqueue/track_a/: __init__.py  consumer.py  gpu_processor.py  producer.py
tests/cpp/: test_ring_math.cpp
tests/cuda/: test_device_query.cu  test_queue_integration.cu
tests/integration/: test_comparison.py
tests/python/: test_api.py  test_track_a.py
