[build-system]
requires = [
  "scikit-build-core>=0.9.0",
  "pybind11>=2.11",
  "cmake>=3.24",
  "ninja>=1.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "gpuqueue"
version = "0.1.0a0"
description = "CUDA-backed GPU-resident message queue with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Chinmay" }]
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]
track-a = [
  "redis[hiredis]>=5.0",
  "msgpack>=1.0",
  "numpy>=1.24",
]
monitor = [
  "psutil>=5.9",
  "nvidia-ml-py>=12.0",
]
dev = [
  "pytest>=7.0",
  "pytest-benchmark>=4.0",
  "mypy",
  "ruff",
]

[tool.scikit-build]
wheel.packages = ["src/python/gpuqueue"]
ninja.minimum-version = "1.11"

[tool.scikit-build.cmake]
minimum-version = "3.24"
verbose = true

# ============== Linting & Formatting ==============

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src/python", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "UP",     # pyupgrade
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["gpuqueue"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
